# rust-metrics

./: .env  Cargo.toml  Dockerfile  Makefile  docker-compose.prod.yaml  docker-compose.yaml
apps/metrics-server/: Cargo.toml
apps/metrics-server/src/: main.rs
apps/metrics-server/src/app/: config.rs  mod.rs  repositories.rs
apps/metrics-server/src/config/: dev.toml  prod.toml
apps/metrics-server/src/feature/metrics/: repository.rs
apps/metrics-server/src/pkg/db/: clickhouse.rs
apps/metrics-server/src/server/grpc/: server.rs
apps/url-shortener/: Cargo.toml
apps/url-shortener/src/: main.rs
apps/url-shortener/src/app/: config.rs  repositories.rs  services.rs
apps/url-shortener/src/config/: dev.toml
apps/url-shortener/src/domain/: url.rs
apps/url-shortener/src/feature/url/: handler.rs  repository.rs  service.rs
apps/url-shortener/src/servers/http/: server.rs
apps/url-shortener/src/utils/: db.rs
migrations/: 20250608030712_test.sql
