[package]
name = "url-shortener"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic.workspace = true
prost.workspace = true
tokio.workspace = true
mimalloc.workspace = true
dotenvy.workspace = true
toml.workspace = true
serde.workspace = true
fake.workspace = true
chrono.workspace = true
clickhouse.workspace = true
axum.workspace = true
humantime.workspace = true
tower-http.workspace = true
sqlx.workspace = true
[target.'cfg(not(target_os = "windows"))'.dependencies]
jemallocator.workspace = true
